Started creating the database template.

--- a/src/main/resources/static/projectSkeleton/html/index.html
+++ b/src/main/resources/static/projectSkeleton/html/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css"/>
     <link rel="icon" href="../images/ace-of-spades.png">
     <title>Tech shop</title>
 
@@ -32,7 +32,7 @@
                     <li class="guest"><a href="/register">Register</a></li>
                 </span>
                 <span id="user-nav">
-                    <li class="user"><a href="/create">Create Album</a></li>
+                    <li class="user"><a href="/create">Wishlist</a></li>
                     <li id="logoutBtn" class="user"><a href="javascript:void(0)">Logout</a></li>
                 </span>
             </ul>
@@ -46,9 +46,9 @@
             </a>
             <div class="card-body">
                 <blockquote class="blockquote mb-0">
-                    <cite>“What new technology does is create new opportunities to do a job that customers want done.”</cite>
+                    <cite>“We cannot change the cards we are dealt, just how we play the hand.”</cite>
                     <footer class="blockquote-footer">
-                        Tim O'Reilly
+                        Randy Pausch
                     </footer>
                 </blockquote>
             </div>
