Full homepage css and html

--- a/src/main/resources/static/projectSkeleton/html/index.html
+++ b/src/main/resources/static/projectSkeleton/html/index.html
@@ -41,7 +41,7 @@
 
     <main>
         <article class="card">
-            <a href="/search" class="store-link">
+            <a href="/catalog" class="store-link">
                 Start
             </a>
             <div class="card-body">
