--- a/src/main/resources/static/projectSkeleton/html/catalog.html
+++ b/src/main/resources/static/projectSkeleton/html/catalog.html
@@ -2,9 +2,87 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/catalog.css"/>
+    <link rel="icon" href="../images/ace-of-spades.png">
+    <title>Victory</title>
 <body>
+<header>
+
+
+    <nav id="nav">
+
+        <a href="/"><img src="../images/emblem.png"></a>
+        <ul>
+
+            <li><a href="/catalog">Catalog</a></li>
+            <li><a href="/search">Offers</a></li>
+            <span id="guest-nav">
+                    <li class="guest"><a href="/login">Login</a></li>
+                    <li class="guest"><a href="/register">Register</a></li>
+                </span>
+            <span id="user-nav">
+                    <li class="user"><a href="/create">Wishlist</a></li>
+                    <li id="logoutBtn" class="user"><a href="javascript:void(0)">Logout</a></li>
+            </span>
+        </ul>
+    </nav>
+
+    <form class="search">
+        <input class="input" type="text" name="search" placeholder="Search">
+        <input class="button" type="submit" name="submit" value="🔍"/>
+    </form>
+
+</header>
+
+<ul id="add">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
+
+<footer>&copy Victory 2022. All rights reserved.</footer>
+
+
+<script>
+    const header = document.querySelector("header");
+
+    function check() {
+        if (window.scrollY === 0) {
+            header.classList.add("top");
+        } else {
+            header.classList.remove("top");
+        }
+    }
+
+    window.addEventListener("scroll", check);
+    window.addEventListener("load", check);
+</script>
 
 </body>
 </html>
