--- a/src/main/resources/static/projectSkeleton/html/index.html
+++ b/src/main/resources/static/projectSkeleton/html/index.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/home.css"/>
     <link rel="icon" href="../images/ace-of-spades.png">
     <title>Victory</title>
 
