--- a/src/main/resources/static/projectSkeleton/html/catalog.html
+++ b/src/main/resources/static/projectSkeleton/html/catalog.html
@@ -28,8 +28,7 @@
     <nav id="nav">
 
         <a href="/"><img src="../images/emblem.png"></a>
-        <ul>
-
+        <ul id="menu">
             <li><a href="/catalog">Catalog</a></li>
             <li><a href="/search">Offers</a></li>
             <span id="guest-nav">
@@ -41,17 +40,16 @@
                     <li id="logoutBtn" class="user"><a href="javascript:void(0)">Logout</a></li>
             </span>
         </ul>
+
+        <button id="hamburger">&#9776;</button>
     </nav>
 
-<!--    <button type="button" class="btn btn-primary sort" data-toggle="modal"-->
-<!--            data-target="#exampleModalCenter" id="openModalBtn">-->
-<!--        Sort-->
-<!--    </button>-->
+    <!--Search and sort-->
 
     <form class="search">
         <input class="button sort btn btn-primary" type="button" data-toggle="modal" data-target="#exampleModalCenter" id="openSortModalBtn" name="category">
         <input class="input" type="text" name="search" placeholder="Search">
-        <input class="button" type="submit" name="submit" value="🔍"/>
+        <input class="button btn" type="submit" name="submit" value="🔍"/>
     </form>
 
 
@@ -86,26 +84,6 @@
 
     <!-- Up to Top Button-->
     <button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top">&#x2191</button>
-
-    <!--    <div id="sortBtnBoxContainer">-->
-    <!--        <div id="sortBtnBox">-->
-
-    <!--            <div class="sortBtnBoxCell">-->
-    <!--                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter"-->
-    <!--                        id="openModalBtn">-->
-    <!--                    Sort By Category-->
-    <!--                </button>-->
-    <!--            </div>-->
-    <!--            <div class="sortBtnBoxCell">-->
-
-    <!--            </div>-->
-    <!--            <div class="sortBtnBoxCell">-->
-
-    <!--            </div>-->
-
-    <!--        </div>-->
-    <!--    </div>-->
-
 
     <!-- Catalog -->
 
@@ -275,6 +253,28 @@
 
 <script>
 
+    //hamburger menu
+    const menu=document.querySelector("#menu");
+    const hambBtn=document.querySelector("#hamburger");
+    const searchBar=document.querySelector(".search");
+
+    window.addEventListener("resize",onResize);
+    window.addEventListener("load", onResize);
+
+    function onResize(ev){
+        ev.preventDefault();
+
+        if(window.innerWidth<1450){
+            hambBtn.style.display="inline";
+            menu.style.display="none";
+            searchBar.style.display="none";
+        }else{
+            hambBtn.style.display="none";
+            menu.style.display="inline";
+            searchBar.style.display="flex";
+        }
+    }
+
     //search bar js
     const header = document.querySelector("header");
     const sortBtn=document.querySelector(".search .sort");
@@ -285,7 +285,7 @@
             sortBtn.value="Sort";
         } else {
             header.classList.remove("top");
-            sortBtn.value=String.fromCharCode(parseInt("021D5",16));
+            sortBtn.value=String.fromCharCode(parseInt("021F5",16));
         }
     }
 
