--- a/src/main/resources/static/projectSkeleton/html/details.html
+++ b/src/main/resources/static/projectSkeleton/html/details.html
@@ -89,18 +89,18 @@
                     <hr />
                     <h3 class="price-container">
                         $129.54
-                        <small>*includes tax</small>
+<!--                        <small>*includes tax</small>-->
                     </h3>
-                    <div class="certified">
-                        <ul>
-                            <li>
-                                <a href="javascript:void(0);">Delivery time<span>7 Working Days</span></a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);">Certified<span>Quality Assured</span></a>
-                            </li>
-                        </ul>
-                    </div>
+<!--                    <div class="certified">-->
+<!--                        <ul>-->
+<!--                            <li>-->
+<!--                                <a href="javascript:void(0);">Delivery time<span>7 Working Days</span></a>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                                <a href="javascript:void(0);">Certified<span>Quality Assured</span></a>-->
+<!--                            </li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
                     <hr />
                     <div class="description description-tabs">
                         <ul id="myTab" class="nav nav-pills">
