--- a/src/main/resources/static/projectSkeleton/html/account.html
+++ b/src/main/resources/static/projectSkeleton/html/account.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
+
+
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+
 
     <script src="../js/navigation.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +20,10 @@
     <title>Victory</title>
 </head>
 <body>
+
 <header>
+
+
     <nav id="nav">
 
         <a href="/"><img src="../images/emblem.png"></a>
@@ -47,137 +45,116 @@
 </header>
 
 <main>
-    <div id="main">
-        <header id="page_heading" class="auth page-heading">
-
-            <h1>Your Account</h1>
-
-
-            <div class="auth_box">
-                <div class="auth_box_inner">
-
-
-                    <ul class="auth_nav">
-                        <li class="login"><a class="active" id="loginBtn" data-section="login"
-                                             href="/users/login"><span>Sign In</span></a></li>
-                        <li></li>
-                        <li class="register"><a id="registerBtn" href="/users/register" data-section="register"
-                                                class=""><span>Sign Up</span></a></li>
-                    </ul>
-
-
-                    <!-- Login Form -->
-                    <div id="auth_login" class="row auth-section">
-                        <form class="auth-form ng-pristine ng-valid" method="POST" action="">
-
-                            <div class="col s12">
-                                <p class="error" style="display: none;"></p>
-                                <p class="login-notice" style="display: none;"></p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="panel panel-login">
+                    <div class="panel-heading">
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <a href="#" class="active" id="login-form-link">Login</a>
                             </div>
-
-                            <div class="col s12">
-                                <input type="text" id="auth_login_username" name="username" value=""
-                                       placeholder="Email Address" required="required" autocorrect="off"
-                                       spellcheck="false" autocomplete="off" class="text focus-field">
+                            <div class="col-xs-6">
+                                <a href="#" id="register-form-link">Register</a>
                             </div>
-
-                            <div class="col s12">
-                                <input type="password" id="auth_login_password" name="password"
-                                       placeholder="Password" autocomplete="off" required="required" class="text">
-                            </div>
-
-                            <div class="col s12">
-                                <input type="submit" id="login_submit" class="btn gold" name="_submit" value="Sign in">
-                            </div>
-                        </form>
+                        </div>
+                        <hr>
                     </div>
-
-
-                    <!--Register Form-->
-
-                    <div id="auth_register" class="row auth-section hidden">
-                        <form class="auth-form ng-pristine ng-valid" method="POST" action="">
-
-                            <div class="form-content">
-                                <div class="col s12 m6 l6">
-                                    <input type="text" id="auth_register_firstname" name="firstName" value=""
-                                           placeholder="First Name" required="required" autocorrect="off"
-                                           spellcheck="false" class="text focus-field">
-                                </div>
-
-                                <div class="col s12 m6 l6">
-                                    <input type="text" id="auth_register_lastname" name="lastName" value=""
-                                           placeholder="Last Name" required="required" autocorrect="off"
-                                           spellcheck="false" class="text">
-                                </div>
-
-                                <div class="col s12 m6 l6">
-                                    <input type="text" id="auth_register_username" name="username" value=""
-                                           placeholder="Username" required="required" autocorrect="off"
-                                           spellcheck="false" class="text">
-                                </div>
-
-                                <div class="col s12 m6 l6">
-                                    <input type="text" id="auth_register_email" name="email" value=""
-                                           placeholder="Email Address" required="required" autocorrect="off"
-                                           spellcheck="false" class="text">
-                                </div>
-
-                                <div class="col s12">
-                                    <input type="password" id="auth_register_password" name="password"
-                                           placeholder="Password" autocomplete="off" required="required" class="text">
-                                </div>
-
-
-                                <div class="col s12">
-                                    <input type="submit" id="auth_register_submit" class="btn gold" name="_submit"
-                                           value="Create Your Account">
-                                </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <form id="login-form" action="https://phpoll.com/login/process" method="post"
+                                      role="form" style="display: block;">
+                                    <div class="form-group">
+                                        <input type="text" name="username" id="username" tabindex="1"
+                                               class="form-control" placeholder="Username" value="">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="password" id="password" tabindex="2"
+                                               class="form-control" placeholder="Password">
+                                    </div>
+                                    <div class="form-group text-center">
+                                        <input type="checkbox" tabindex="3" class="" name="remember" id="remember">
+                                        <label for="remember"> Remember Me</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-sm-6 col-sm-offset-3">
+                                                <input type="submit" name="login-submit" id="login-submit" tabindex="4"
+                                                       class="form-control btn btn-login" value="Log In">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-lg-12">
+                                                <div class="text-center">
+                                                    <a href="https://phpoll.com/recover" tabindex="5"
+                                                       class="forgot-password">Forgot Password?</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                                <form id="register-form" action="https://phpoll.com/register/process" method="post"
+                                      role="form" style="display: none;">
+                                    <div class="form-group">
+                                        <input type="text" name="username" id="username" tabindex="1"
+                                               class="form-control" placeholder="Username" value="">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" name="email" id="email" tabindex="1" class="form-control"
+                                               placeholder="Email Address" value="">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="password" id="password" tabindex="2"
+                                               class="form-control" placeholder="Password">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="confirm-password" id="confirm-password"
+                                               tabindex="2" class="form-control" placeholder="Confirm Password">
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-sm-6 col-sm-offset-3">
+                                                <input type="submit" name="register-submit" id="register-submit"
+                                                       tabindex="4" class="form-control btn btn-register"
+                                                       value="Register Now">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
-                        </form>
+                        </div>
                     </div>
-
                 </div>
             </div>
-        </header>
-
+        </div>
     </div>
 </main>
 
 <footer>&copy Victory 2022. All rights reserved.</footer>
 
 <script>
-    let registerMenu = document.querySelector("#auth_register");
-    let loginMenu = document.querySelector("#auth_login");
-    let registerBtnSwitch = document.querySelector("#registerBtn");
-    let loginBtnSwitch = document.querySelector("#loginBtn");
+    $(function () {
 
-    if (registerMenu.style.display === "none") {
-        loginBtnSwitch.style.borderBottom = "2px solid #b78846";
-    } else {
-        registerBtnSwitch.style.borderBottom = "2px solid #b78846";
-    }
+        $('#login-form-link').click(function (e) {
+            $("#login-form").delay(100).fadeIn(100);
+            $("#register-form").fadeOut(100);
+            $('#register-form-link').removeClass('active');
+            $(this).addClass('active');
+            e.preventDefault();
+        });
+        $('#register-form-link').click(function (e) {
+            $("#register-form").delay(100).fadeIn(100);
+            $("#login-form").fadeOut(100);
+            $('#login-form-link').removeClass('active');
+            $(this).addClass('active');
+            e.preventDefault();
+        });
 
-    registerBtnSwitch.addEventListener("click", e => {
-        e.preventDefault();
-        registerMenu.style.display = "inline-block";
-        loginMenu.style.display = "none";
-        registerBtnSwitch.disabled = true;
-        loginBtnSwitch.disabled = false;
-        loginBtnSwitch.style.borderBottom = "none";
-        registerBtnSwitch.style.borderBottom = "2px solid #b78846";
     });
-
-    loginBtnSwitch.addEventListener("click", e => {
-        e.preventDefault();
-        loginMenu.style.display = "inline-block";
-        registerMenu.style.display = "none";
-        registerBtnSwitch.disabled = false;
-        loginBtnSwitch.disabled = true;
-        loginBtnSwitch.style.borderBottom = "2px solid #b78846";
-        registerBtnSwitch.style.borderBottom = "none";
-
-    })
 </script>
+
 </body>
 </html>
