--- a/src/main/resources/static/projectSkeleton/html/index.html
+++ b/src/main/resources/static/projectSkeleton/html/index.html
@@ -49,41 +49,40 @@
 </header>
 
 <main>
-    <article class="card">
-        <a href="/catalog" class="store-link">
-            Start
-        </a>
-        <div class="card-body">
-            <blockquote class="blockquote mb-0">
-                <cite>“We cannot change the cards we are dealt, just how we play the hand.”</cite>
-                <footer class="blockquote-footer">
-                    Randy Pausch
-                </footer>
-            </blockquote>
+    <section>
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col col-lg-9 col-xl-7">
+                    <div class="card" style="border-radius: 15px;">
+                        <div class="card-body p-5">
+
+                            <a href="/catalog" class="store-link">
+                                Start
+                            </a>
+
+                            <figure class="text-center mb-0">
+                                <blockquote class="blockquote">
+                                    <p class="pb-3">
+                                        <i class="fas fa-quote-left fa-xs text-primary"></i>
+                                        <span class="lead font-italic">Many of life's failures are people who did not realize how
+                    close they were to success when they gave up.</span>
+                                        <i class="fas fa-quote-right fa-xs text-primary"></i>
+                                    </p>
+                                </blockquote>
+                                <figcaption class="blockquote-footer mb-0">
+                                    Thomas Edison
+                                </figcaption>
+                            </figure>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </article>
+    </section>
 </main>
 
 <footer>&copy Victory 2022. All rights reserved.</footer>
-
-<script>
-    // const card=document.querySelector(".card");
-    //
-    // window.addEventListener("load", onResize);
-    // window.addEventListener("resize", onResize);
-    //
-    // function onResize(ev){
-    //     ev.preventDefault();
-    //
-    //     if(window.innerWidth<750){
-    //         card.style.marginLeft=(window.innerWidth-300)/2;
-    //         card.style.marginRight=(window.innerWidth-300)/2;
-    //     }else{
-    //         card.style.marginLeft=window.innerWidth*0.4;
-    //         card.style.marginRight=window.innerWidth*0.4;
-    //     }
-    // }
-</script>
 
 </body>
 
