--- a/src/main/resources/static/projectSkeleton/html/account.html
+++ b/src/main/resources/static/projectSkeleton/html/account.html
@@ -10,12 +10,14 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <script src="../js/navigation.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/account.css"/>
+    <link rel="stylesheet" href="../css/bootstrap/bootstrapNav.css"/>
+    <script src="../js/sidebar.js" type="module"></script>
     <link rel="icon" href="../images/ace-of-spades.png">
     <title>Victory</title>
 </head>
@@ -23,10 +25,10 @@
 
 <header>
 
-
-    <nav id="nav">
+    <nav id="nav" class="navbar navbar-expand">
 
         <a href="/"><img src="../images/emblem.png"></a>
+
         <ul id="menu">
             <li><a href="/catalog">Catalog</a></li>
             <li><a href="/search">Offers</a></li>
@@ -40,9 +42,24 @@
             </span>
         </ul>
 
-        <button id="hamburger">&#9776;</button>
+        <a href="#" id="menu-toggle" class="navbar-brand">&#9776</a>
     </nav>
+
 </header>
+
+<div id="wrapper">
+    <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <li><a href="#">Catalog</a></li>
+            <li><a href="#">Offers</a></li>
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Register</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Wishlist</a></li>
+            <li><a href="#">Logout</a></li>
+        </ul>
+    </div>
+</div>
 
 <main>
     <div class="container">
@@ -66,11 +83,11 @@
                                 <form id="login-form" action="https://phpoll.com/login/process" method="post"
                                       role="form" style="display: block;">
                                     <div class="form-group">
-                                        <input type="text" name="username" id="username" tabindex="1"
+                                        <input type="text" name="username" id="log_username" tabindex="1"
                                                class="form-control" placeholder="Username" value="">
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" name="password" id="password" tabindex="2"
+                                        <input type="password" name="password" id="log_password" tabindex="2"
                                                class="form-control" placeholder="Password">
                                     </div>
                                     <div class="form-group text-center">
@@ -99,7 +116,7 @@
                                 <form id="register-form" action="https://phpoll.com/register/process" method="post"
                                       role="form" style="display: none;">
                                     <div class="form-group">
-                                        <input type="text" name="username" id="username" tabindex="1"
+                                        <input type="text" name="username" id="reg_username" tabindex="1"
                                                class="form-control" placeholder="Username" value="">
                                     </div>
                                     <div class="form-group">
@@ -107,7 +124,7 @@
                                                placeholder="Email Address" value="">
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" name="password" id="password" tabindex="2"
+                                        <input type="password" name="password" id="reg_password" tabindex="2"
                                                class="form-control" placeholder="Password">
                                     </div>
                                     <div class="form-group">
