--- a/src/main/resources/static/projectSkeleton/html/index.html
+++ b/src/main/resources/static/projectSkeleton/html/index.html
@@ -16,7 +16,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
-    <script src="../js/navigation.js" type="module"></script>
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="../js/sidebar.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
@@ -28,9 +33,10 @@
 
 <body>
 <header>
-    <nav id="nav">
+    <nav id="nav" class="navbar navbar-expand">
 
         <a href="/"><img src="../images/emblem.png"></a>
+
         <ul id="menu">
             <li><a href="/catalog">Catalog</a></li>
             <li><a href="/search">Offers</a></li>
@@ -44,9 +50,23 @@
             </span>
         </ul>
 
-        <button id="hamburger">&#9776;</button>
+        <a href="#" id="menu-toggle" class="navbar-brand">&#9776</a>
     </nav>
 </header>
+
+<div id="wrapper">
+    <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <li><a href="#">Catalog</a></li>
+            <li><a href="#">Offers</a></li>
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Register</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Wishlist</a></li>
+            <li><a href="#">Logout</a></li>
+        </ul>
+    </div>
+</div>
 
 <main>
     <section>
@@ -64,13 +84,12 @@
                                 <blockquote class="blockquote">
                                     <p class="pb-3">
                                         <i class="fas fa-quote-left fa-xs text-primary"></i>
-                                        <span class="lead font-italic">Many of life's failures are people who did not realize how
-                    close they were to success when they gave up.</span>
+                                        <span class="lead font-italic">We cannot change the cards we are dealt, just how we play the hand.</span>
                                         <i class="fas fa-quote-right fa-xs text-primary"></i>
                                     </p>
                                 </blockquote>
                                 <figcaption class="blockquote-footer mb-0">
-                                    Thomas Edison
+                                    Randy Pausch
                                 </figcaption>
                             </figure>
 
