--- a/src/main/resources/static/projectSkeleton/html/catalog.html
+++ b/src/main/resources/static/projectSkeleton/html/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -15,13 +16,17 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
-    <script src="../js/navigation.js" type="module"></script>
+
     <script src="../js/backToTop.js" type="module"></script>
     <script src="../js/searchbar.js" type="module"></script>
+    <script src="../js/sidebar.js" type="module"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/catalog.css"/>
+
     <link rel="icon" href="../images/ace-of-spades.png">
     <title>Victory</title>
 <body>
@@ -269,28 +274,6 @@
 </main>
 
 <footer>&copy Victory 2022. All rights reserved.</footer>
-
-
-<script>
-
-    $(function () {
-        $("#menu-toggle").click(function (e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("toggled");
-        });
-    });
-
-    const wrapper = document.querySelector("#wrapper");
-
-    window.addEventListener("load", onResize);
-    window.addEventListener("resize", onResize);
-
-    function onResize(ev) {
-        ev.preventDefault();
-
-        wrapper.classList.remove("toggled");
-    }
-</script>
 
 </body>
 </html>
