--- a/src/main/resources/static/projectSkeleton/html/catalog.html
+++ b/src/main/resources/static/projectSkeleton/html/catalog.html
@@ -80,16 +80,36 @@
             </div>
 
             <div class="modal-body">
-                ...
+                <form action="#" method="get" id="sort_form">
+
+<!--                    Change ids(and label fors) and sort options-->
+
+                    <input type="radio" name="sort_alphabetically" value="Sort Alphabetically" id="1">
+                    <label for="1">Sort Alphabetically</label>
+
+                    <input type="radio" name="sort_alphabetically" value="Sort by Price(Low to High)" id="2">
+                    <label for="2">Sort By Price(Low to High)</label>
+
+                    <input type="radio" name="sort_alphabetically" value="Sort by Price(High to Low)" id="3">
+                    <label for="3">Sort by Price(High to Low)</label>
+
+                    <input type="radio" name="sort_alphabetically" value="Sort by " id="4">
+                    <label for="4">Sort Alphabetically</label>
+
+                </form>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeModalBtn">Close</button>
+                    <button type="submit" class="btn btn-primary" id="saveSortBtn" form="sort_form">Save changes</button>
+                </div>
             </div>
 
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeModalBtn">Close</button>
-                <button type="button" class="btn btn-primary" id="saveSortBtn">Save changes</button>
-            </div>
+
         </div>
     </div>
 </article>
+
+<!--Sidebar-->
 
 <div id="wrapper">
     <div id="sidebar-wrapper">
@@ -274,6 +294,9 @@
 </main>
 
 <footer>&copy Victory 2022. All rights reserved.</footer>
+
+<script>
+</script>
 
 </body>
 </html>
