Reviews page almost done and starting adding review page

--- a/src/main/resources/static/projectSkeleton/html/addOffer.html
+++ b/src/main/resources/static/projectSkeleton/html/addOffer.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/makeOffer.css"/>
+    <link rel="stylesheet" href="../css/addOffer.css"/>
     <link rel="stylesheet" href="../css/bootstrap/bootstrapNav.css"/>
 
     <script src="../js/sidebar.js" type="module"></script>
