--- a/src/main/resources/static/projectSkeleton/html/details.html
+++ b/src/main/resources/static/projectSkeleton/html/details.html
@@ -90,7 +90,7 @@
                         <button class="btn btn-dark btn-rounded mr-1 carted" data-toggle="tooltip" title="" data-original-title="Add to cart">
                             <i class="fa fa-shopping-cart"></i>
                         </button>
-                        <button class="btn btn-primary btn-rounded buy-btn"><a href="#">Buy Now</a></button>
+                        <button class="btn btn-primary btn-rounded buy-btn"><a href="#" id="purchase-btn">Buy Now</a></button>
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <h3 class="box-title mt-5">General Info</h3>
