Reviews page- done + little adjustments

--- a/src/main/resources/static/projectSkeleton/html/details.html
+++ b/src/main/resources/static/projectSkeleton/html/details.html
@@ -122,8 +122,12 @@
                                     <td>Office Chair</td>
                                 </tr>
                                 <tr>
+                                    <td>Reviews</td>
+                                    <td><a href="#">Office Chair</a></td>
+                                </tr>
+                                <tr>
                                     <td>Offers</td>
-                                    <td>Office Chair</td>
+                                    <td><a href="#">Office Chair</a></td>
                                 </tr>
                                 </tbody>
                             </table>
